[gd_scene load_steps=7 format=3 uid="uid://dvstna4f1gm4r"]

[ext_resource type="Shader" path="res://Pause_menu.gdshader" id="1_noci1"]
[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_tsi4p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_33ug7"]
shader = ExtResource("1_noci1")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_c6e2y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(0.901249),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yk88u"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cvjqb"]
_data = {
"RESET": SubResource("Animation_c6e2y"),
"blur": SubResource("Animation_yk88u")
}

[node name="Pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 6.28319
script = ExtResource("1_tsi4p")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_33ug7")
layout_mode = 2
offset_left = 4.0
offset_top = -2.0
offset_right = 1144.0
offset_bottom = 644.0

[node name="PanelContainer" type="PanelContainer" parent="."]
process_mode = 2
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.999
offset_top = -182.002
offset_right = 181.001
offset_bottom = 179.998
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("VBoxContainer/Continue")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 50

[node name="Continue" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Main Page" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Page"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_cvjqb")
}
autoplay = "RESET"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Main Page" to="." method="_on_main_page_pressed"]
